created Logan boxplot_p3

--- a/Data Exploration/Logan/Logan_p3.ipynb
+++ b/Data Exploration/Logan/Logan_p3.ipynb
@@ -2891,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3484,7 +3484,7 @@
        "[299 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3495,7 +3495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3623,7 +3623,7 @@
        "Biochemistry, Genetics and Molecular Biology (all)    15.745063  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3638,7 +3638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3766,7 +3766,7 @@
        "Biotechnology                                          8.891410  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3778,7 +3778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3788,7 +3788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3811,7 +3811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4350,7 +4350,7 @@
        "[299 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4362,7 +4362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4490,7 +4490,7 @@
        "Applied Mathematics                                   23.841527  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4502,7 +4502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4512,7 +4512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4603,7 +4603,7 @@
        "Medicine (all)                                        13.889225"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4617,7 +4617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4638,7 +4638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -4729,7 +4729,7 @@
        "Biotechnology                                          8.891410"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4740,7 +4740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -4773,65 +4773,65 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Arts and Humanities (all)</th>\n",
-       "      <td>442.200000</td>\n",
+       "      <th>Applied Mathematics</th>\n",
+       "      <td>23.841527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Embryology</th>\n",
-       "      <td>322.608696</td>\n",
+       "      <th>Theoretical Computer Science</th>\n",
+       "      <td>22.956099</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Accounting</th>\n",
-       "      <td>177.333333</td>\n",
+       "      <th>Computer Science (all)</th>\n",
+       "      <td>18.998037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Nuclear and High Energy Physics</th>\n",
-       "      <td>156.933333</td>\n",
+       "      <th>Molecular Biology</th>\n",
+       "      <td>18.875802</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Geochemistry and Petrology</th>\n",
-       "      <td>128.000000</td>\n",
+       "      <th>Genetics</th>\n",
+       "      <td>17.546686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Nursing (all)</th>\n",
-       "      <td>104.200000</td>\n",
+       "      <th>Computer Science Applications</th>\n",
+       "      <td>15.900000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Archeology</th>\n",
-       "      <td>97.500000</td>\n",
+       "      <th>Biochemistry, Genetics and Molecular Biology (all)</th>\n",
+       "      <td>15.745063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Chiropractics</th>\n",
-       "      <td>71.000000</td>\n",
+       "      <th>Biomedical Engineering</th>\n",
+       "      <td>15.314147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mathematics (miscellaneous)</th>\n",
-       "      <td>45.454545</td>\n",
+       "      <th>Biochemistry</th>\n",
+       "      <td>14.425570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Business, Management and Accounting (all)</th>\n",
-       "      <td>38.692308</td>\n",
+       "      <th>Medicine (all)</th>\n",
+       "      <td>13.889225</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           Cit_per_Pub\n",
-       "Text                                                  \n",
-       "Arts and Humanities (all)                   442.200000\n",
-       "Embryology                                  322.608696\n",
-       "Accounting                                  177.333333\n",
-       "Nuclear and High Energy Physics             156.933333\n",
-       "Geochemistry and Petrology                  128.000000\n",
-       "Nursing (all)                               104.200000\n",
-       "Archeology                                   97.500000\n",
-       "Chiropractics                                71.000000\n",
-       "Mathematics (miscellaneous)                  45.454545\n",
-       "Business, Management and Accounting (all)    38.692308"
+       "                                                    Cit_per_Pub\n",
+       "Text                                                           \n",
+       "Applied Mathematics                                   23.841527\n",
+       "Theoretical Computer Science                          22.956099\n",
+       "Computer Science (all)                                18.998037\n",
+       "Molecular Biology                                     18.875802\n",
+       "Genetics                                              17.546686\n",
+       "Computer Science Applications                         15.900000\n",
+       "Biochemistry, Genetics and Molecular Biology (all)    15.745063\n",
+       "Biomedical Engineering                                15.314147\n",
+       "Biochemistry                                          14.425570\n",
+       "Medicine (all)                                        13.889225"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
