deleted duplicate notebook

--- a/Data Exploration/Logan/Logan_Avg_Num_citations.ipynb
+++ b/Data Exploration/Logan/Logan_Avg_Num_citations.ipynb
@@ -1486,6 +1486,7 @@
     "del df_logan['year']\n",
     "del df_logan['publication_name']\n",
     "del df_logan['Code']\n",
+    "del df_logan['Text']\n",
     "del df_logan['publication_type']"
    ]
   },
