--- a/Code for Data Extraction from JSON files/Logan Data Extraction.ipynb
+++ b/Code for Data Extraction from JSON files/Logan Data Extraction.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,23 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18646\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# check if json file properly read\n",
-    "\n",
-    "print(len(data))"
+    "print(data)"
    ]
   },
   {
@@ -1338,7 +1328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
