reviewed older notebooks

--- a/Data Exploration/Logan/Logan_Avg_Num_citations.ipynb
+++ b/Data Exploration/Logan/Logan_Avg_Num_citations.ipynb
@@ -36,7 +36,7 @@
     "import pandas as pd\n",
     "from ast import literal_eval\n",
     "\n",
-    "df_logan = pd.read_csv(r'/Users/loganhornbuckle/Desktop/Data_Science/Merged/all_years_merged_logan_mouna_darpan.csv',\n",
+    "df_logan = pd.read_csv(r'/Users/loganhornbuckle/Documents/Data_Science/Merged/all_years_merged_logan_mouna_darpan.csv',\n",
     "                       encoding='cp1252' ,dtype='str', error_bad_lines=False)\n",
     "\n",
     "# get dimmensions of dataframe to ensure csv imported correctly\n",
@@ -1491,6 +1491,423 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cite</th>\n",
+       "      <th>Abbreviation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ENGI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ENGI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>ENGI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6</td>\n",
+       "      <td>ENGI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>8</td>\n",
+       "      <td>COMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>MATH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>4</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>8</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>COMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>4</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2</td>\n",
+       "      <td>MATH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ENGI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MATH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>0</td>\n",
+       "      <td>COMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85052</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85053</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85054</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85055</th>\n",
+       "      <td>2</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85056</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85057</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85058</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85059</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85060</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85061</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85062</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85063</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85064</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85065</th>\n",
+       "      <td>5</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85066</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85067</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85068</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AGRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85069</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85070</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NEUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85071</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85072</th>\n",
+       "      <td>0</td>\n",
+       "      <td>COMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85073</th>\n",
+       "      <td>2</td>\n",
+       "      <td>MATH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85074</th>\n",
+       "      <td>0</td>\n",
+       "      <td>COMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85075</th>\n",
+       "      <td>0</td>\n",
+       "      <td>COMP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85076</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85077</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85078</th>\n",
+       "      <td>0</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85079</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85080</th>\n",
+       "      <td>1</td>\n",
+       "      <td>MEDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85081</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BIOC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>85082 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      cite Abbreviation\n",
+       "0        2         BIOC\n",
+       "1       17         BIOC\n",
+       "2        0         BIOC\n",
+       "3        0         ENGI\n",
+       "4        0         ENGI\n",
+       "5        3         ENGI\n",
+       "6        7         BIOC\n",
+       "7        3         BIOC\n",
+       "8        0         BIOC\n",
+       "9        6         ENGI\n",
+       "10       0         BIOC\n",
+       "11       8         COMP\n",
+       "12       1         MATH\n",
+       "13       4         BIOC\n",
+       "14       0         BIOC\n",
+       "15       0         BIOC\n",
+       "16       8         BIOC\n",
+       "17       0         COMP\n",
+       "18       4         BIOC\n",
+       "19       2         MATH\n",
+       "20       2         BIOC\n",
+       "21       0         BIOC\n",
+       "22       0         AGRI\n",
+       "23       0         AGRI\n",
+       "24       0         ENGI\n",
+       "25       0         MATH\n",
+       "26       0         COMP\n",
+       "27       0         AGRI\n",
+       "28       0         BIOC\n",
+       "29       0         MEDI\n",
+       "...    ...          ...\n",
+       "85052    0         BIOC\n",
+       "85053    1         BIOC\n",
+       "85054    0         AGRI\n",
+       "85055    2         AGRI\n",
+       "85056    0         BIOC\n",
+       "85057    0         AGRI\n",
+       "85058    0         AGRI\n",
+       "85059    0         MEDI\n",
+       "85060    0         AGRI\n",
+       "85061    0         BIOC\n",
+       "85062    0         MEDI\n",
+       "85063    0         MEDI\n",
+       "85064    0         BIOC\n",
+       "85065    5         AGRI\n",
+       "85066    0         MEDI\n",
+       "85067    0         BIOC\n",
+       "85068    0         AGRI\n",
+       "85069    0         BIOC\n",
+       "85070    0         NEUR\n",
+       "85071    0         MEDI\n",
+       "85072    0         COMP\n",
+       "85073    2         MATH\n",
+       "85074    0         COMP\n",
+       "85075    0         COMP\n",
+       "85076    0         MEDI\n",
+       "85077    1         BIOC\n",
+       "85078    0         MEDI\n",
+       "85079    0         BIOC\n",
+       "85080    1         MEDI\n",
+       "85081    0         BIOC\n",
+       "\n",
+       "[85082 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_logan"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1877,7 +2294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
